tests/ui/generics/single-colon-path-not-const-generics.stderr
error: path separator must be a double colon
  --> $DIR/single-colon-path-not-const-generics.rs:8:18
   |
LL | pub struct Foo {
   |            --- while parsing this struct
LL |   a: Vec<foo::bar:A>,
   |                  ^
   |
help: use a double colon instead
   |
LL |   a: Vec<foo::bar::A>,
   |                  +

error: aborting due to 1 previous error

